// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiForm is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiForm renders a form element 1`] = `
<form
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger euiForm__errors emotion-euiPanel-none-m-danger-euiCallOut"
    role="alert"
    tabindex="-1"
  >
    <button
      aria-label="Close callout"
      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-danger-euiCallOut__closeIcon"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
    </button>
    <p
      class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-danger"
    >
      Please address the highlighted errors.
    </p>
    <button
      class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-danger"
      type="button"
    >
      <span
        class="emotion-euiButtonDisplayContent"
      >
        <span
          class="eui-textTruncate"
        >
          Dismiss
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" and has multiple errors 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger euiForm__errors emotion-euiPanel-none-m-danger-euiCallOut"
    role="alert"
    tabindex="-1"
  >
    <button
      aria-label="Close callout"
      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-danger-euiCallOut__closeIcon"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
    </button>
    <p
      class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-danger"
    >
      Please address the highlighted errors.
    </p>
    <div
      class="euiText emotion-euiText-s-euiTextColor-default-euiCallOut__description"
    >
      <ul>
        <li
          class="euiForm__error"
        >
          <span>
            This is one error
          </span>
        </li>
        <li
          class="euiForm__error"
        >
          <span>
            This is another error
          </span>
        </li>
      </ul>
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-danger"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Dismiss
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" and has one error 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--danger euiPanel--paddingMedium euiCallOut euiCallOut--danger euiForm__errors emotion-euiPanel-none-m-danger-euiCallOut"
    role="alert"
    tabindex="-1"
  >
    <button
      aria-label="Close callout"
      class="euiButtonIcon emotion-euiButtonIcon-xs-empty-danger-euiCallOut__closeIcon"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="cross"
      />
    </button>
    <p
      class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader-danger"
    >
      Please address the highlighted errors.
    </p>
    <div
      class="euiText emotion-euiText-s-euiTextColor-default-euiCallOut__description"
    >
      <ul>
        <li
          class="euiForm__error"
        >
          <span>
            This is one error
          </span>
        </li>
      </ul>
      <button
        class="euiButton emotion-euiButtonDisplay-m-defaultMinWidth-base-danger"
        type="button"
      >
        <span
          class="emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate"
          >
            Dismiss
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiForm renders without error callout when invalidCallout is "none" 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;
